main.tf
resource "aws_vpc" "zabbix_vpc" {
  cidr_block                       = "10.10.0.0/16" # VPCに設定したいCIDRを指定
  enable_dns_support               = "true" # VPC内でDNSによる名前解決を有効化するかを指定
  enable_dns_hostnames             = "true" # VPC内インスタンスがDNSホスト名を取得するかを指定
  instance_tenancy                 = "default" # VPC内インスタンスのテナント属性を指定
  assign_generated_ipv6_cidr_block = "false" # IPv6を有効化するかを指定

  tags = {
    Name  = "zabbix_vpc"
  }
}

resource "aws_subnet" "zabbix_subnet_a" {
  vpc_id                          = aws_vpc.zabbix_vpc.id # VPCのIDを指定
  cidr_block                      = "10.10.1.0/24" # サブネットに設定したいCIDRを指定
  assign_ipv6_address_on_creation = "false" # IPv6を利用するかどうかを指定
  map_public_ip_on_launch         = "true" # VPC内インスタンスにパブリックIPアドレスを付与するかを指定
  availability_zone               = "ap-northeast-1a" # サブネットが稼働するAZを指定

  tags = {
    Name = "zabbix_subnet_1a"
  }
}
resource "aws_internet_gateway" "zabbix_igw" {
  vpc_id = aws_vpc.zabbix_vpc.id # VPCのIDを指定

  tags = {
    Name  = "zabbix_igw"
  }
}

resource "aws_route_table" "zabbix_rt" {
  vpc_id = aws_vpc.zabbix_vpc.id # VPCのIDを指定

  # 外部向け通信を可能にするためのルート設定
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.zabbix_igw.id
  }

  tags = {
    Name  = "zabbix_rt"
  }
}
#VPCなど紐づけ設定
resource "aws_main_route_table_association" "zabbix_rt_vpc" {
  vpc_id         = aws_vpc.zabbix_vpc.id # 紐づけたいVPCのIDを指定
  route_table_id = aws_route_table.zabbix_rt.id # 紐付けたいルートテーブルのIDを指定
}

resource "aws_route_table_association" "zabbix_rt_subet_a" {
  subnet_id      = aws_subnet.zabbix_subnet_a.id # 紐づけたいサブネットのIDを指定
  route_table_id = aws_route_table.zabbix_rt.id # 紐付けたいルートテーブルのIDを指定
}

module "security_group" {
  source  = "terraform-aws-modules/security-group/aws"
  version = "4.8.0"

  name        = "example"
  description = "Security group for example usage with EC2 instance"
  vpc_id      = aws_vpc.zabbix_vpc.id

  ingress_cidr_blocks = [join("/", [chomp(data.http.ifconfig.body), "32"])]
  ingress_rules       = ["ssh-tcp", "http-80-tcp", "all-icmp"]
  egress_rules        = ["all-all"]
}

# EC2作成(public側)
resource "aws_instance" "ec2_apache_server" {
  ami                     = "ami-00c8dfcb0b542ee0c"
  instance_type           = "t2.micro"
  disable_api_termination = false
  key_name               = "ELB-test"
  vpc_security_group_ids  = [module.security_group.security_group_id]
  subnet_id               = aws_subnet.zabbix_subnet_a.id
 
  tags = {
    Name = "ec2_apache"
  }
}
